used copyProperties